--- a/package.json
+++ b/package.json
@@ -52,13 +52,20 @@
     "node": ">=8.9"
   },
   "dependencies": {
+    "@types/mocha": "^5.2.5",
+    "apollo-server": "^2.0.0",
+    "bcoin": "^1.0.2",
+    "bsert": "^0.0.4",
+    "bweb": "^0.1.2",
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
     "ava": "^1.0.0-beta.5.1",
+    "bcfg": "^0.1.2",
     "codecov": "^3.0.2",
     "cz-conventional-changelog": "^2.1.0",
     "gh-pages": "^1.2.0",
+    "mocha": "^5.2.0",
     "npm-run-all": "^4.1.3",
     "nyc": "^12.0.2",
     "opn-cli": "^3.1.0",
