--- a/package.json
+++ b/package.json
@@ -54,10 +54,13 @@
   "dependencies": {
     "@types/mocha": "^5.2.5",
     "apollo-server": "^2.0.0",
+    "apollo-server-core": "^2.0.4",
     "bcoin": "^1.0.2",
     "bsert": "^0.0.4",
     "bweb": "^0.1.2",
-    "sha.js": "^2.4.11"
+    "reflect-metadata": "^0.1.12",
+    "sha.js": "^2.4.11",
+    "type-graphql": "^0.13.1"
   },
   "devDependencies": {
     "ava": "^1.0.0-beta.5.1",
