--- a/package.json
+++ b/package.json
@@ -52,12 +52,17 @@
     "node": ">=8.9"
   },
   "dependencies": {
+    "@types/graphql": "^0.13.4",
     "@types/mocha": "^5.2.5",
+    "apollo-cache-inmemory": "^1.2.8",
+    "apollo-client": "^2.4.0",
+    "apollo-link-http": "^1.5.4",
     "apollo-server": "^2.0.0",
     "apollo-server-core": "^2.0.4",
     "bcoin": "^1.0.2",
     "bsert": "^0.0.4",
     "bweb": "^0.1.2",
+    "graphql": "^0.13.2",
     "reflect-metadata": "^0.1.12",
     "sha.js": "^2.4.11",
     "type-graphql": "^0.13.1"
