--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@types/graphql": "^0.13.4",
     "@types/mocha": "^5.2.5",
+    "@types/node-fetch": "^2.1.2",
     "apollo-cache-inmemory": "^1.2.8",
     "apollo-client": "^2.4.0",
     "apollo-link-http": "^1.5.4",
@@ -63,6 +64,7 @@
     "bsert": "^0.0.4",
     "bweb": "^0.1.2",
     "graphql": "^0.13.2",
+    "node-fetch": "^2.2.0",
     "reflect-metadata": "^0.1.12",
     "sha.js": "^2.4.11",
     "type-graphql": "^0.13.1"
